--- a/Barbar.Delaunay.WindowsDrawing/Barbar.Delaunay.WindowsDrawing.csproj
+++ b/Barbar.Delaunay.WindowsDrawing/Barbar.Delaunay.WindowsDrawing.csproj
@@ -54,6 +54,9 @@
       <Name>Barbar.Delaunay</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Barbar.Delaunay.WindowsDrawing.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
