--- a/Barbar.Delaunay/Barbar.Delaunay.csproj
+++ b/Barbar.Delaunay/Barbar.Delaunay.csproj
@@ -75,6 +75,9 @@
     <Compile Include="Voronoi\Edge.cs" />
     <Compile Include="Voronoi\VoronoiGraph.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Barbar.Delaunay.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
