--- a/Barbar.Delaunay.Console3D/Barbar.Delaunay.Console3D.csproj
+++ b/Barbar.Delaunay.Console3D/Barbar.Delaunay.Console3D.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Content\specular.fx" />
+    <None Include="Content\texture.fx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
