--- a/Barbar.Delaunay.Console3D/Barbar.Delaunay.Console3D.csproj
+++ b/Barbar.Delaunay.Console3D/Barbar.Delaunay.Console3D.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Content\diffuse.fx" />
     <None Include="Content\specular.fx" />
     <None Include="Content\texture.fx" />
   </ItemGroup>
